--- a/.github/workflows/build_version.yml
+++ b/.github/workflows/build_version.yml
@@ -22,12 +22,6 @@ jobs:
       - name: set version
         run: echo "BASE_VERSION=${{ inputs.base_version }}${{ github.event.client_payload.base_version }}" >> $GITHUB_ENV
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
       - name: Login to ghcr.io
         uses: docker/login-action@v3
         with:
@@ -39,7 +33,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ vars.DOCKER_USERNAME }}/${{ vars.DOCKER_IMAGE }},ghcr.io/${{ github.repository }}
+          images: ghcr.io/${{ github.repository }}
           tags: |
             type=raw,value=${{ env.BASE_VERSION }}
             type=raw,value=latest,enable=${{ github.event.client_payload.is_latest == 'yes' }}
@@ -59,7 +53,7 @@ jobs:
           build-contexts: |
             ghcr.io/ihost-open-source-project/hassio-ihost-silabs-multiprotocol-aarch64:${{ env.BASE_VERSION }}=docker-image://ghcr.io/ihost-open-source-project/hassio-ihost-silabs-multiprotocol-aarch64:${{ env.BASE_VERSION }}
             ghcr.io/ihost-open-source-project/hassio-ihost-silabs-multiprotocol-arm:${{ env.BASE_VERSION }}=docker-image://ghcr.io/ihost-open-source-project/hassio-ihost-silabs-multiprotocol-armv7:${{ env.BASE_VERSION }}
-          platforms: linux/amd64,linux/aarch64,linux/arm/v7
+          platforms: linux/aarch64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
